# cppsocket

./: CMakeLists.txt  cppsocket.hpp
examples/: CMakeLists.txt  cflags.cmake  client.cpp  client_udp_variant.cpp  init.c  init.cpp  server.c  server.cpp  server_udp_variant.cpp
include/cppsocket/: address.hpp  constrained_type.hpp  cppsocket.hpp  fixed_int.hpp  fixed_t.hpp  helper_macros.hpp  is_packet.hpp  packet.hpp  socket.hpp
include/cppsocket/details/: apply_index.hpp  convert_byte_order.hpp  ct_ip.hpp  has_padding.hpp  hash_combine.hpp  helper_macros.hpp  platform_headers.hpp  safe_rcast.hpp  socket_resource.hpp
